test(FieldInjection): happy path 通过 field 注入